--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <base href="">
 <meta charset="utf-8">
 <title>Kappa Theta Pi - Vanderbilt</title>
-<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model"><link rel="icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/60ee4f3db240f96f8b2d1216/91de96b3-9db2-4e44-a1b4-c1bf9a2ccff5/favicon.ico?format=100w">
+<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model"><link rel="icon" type="image/x-icon" href="images/logo.png">
 <link rel="canonical" href="https://www.thetatau.Vanderbilt.edu">
 <meta property="og:site_name" content="Kappa Theta Pi - Vanderbilt">
 <meta property="og:title" content="Kappa Theta Pi - Vanderbilt">
@@ -16,18 +16,16 @@
 <meta property="og:image:width" content="192">
 <meta property="og:image:height" content="328">
 <meta itemprop="name" content="Kappa Theta Pi - Vanderbilt">
-<meta itemprop="url" content="https://www.thetatau.Vanderbilt.edu">
 <meta itemprop="description" content="As the nation's oldest and foremost fraternity for engineers, Kappa Theta Pi focuses on developing leaders for profession, service, and About.">
 <meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/60ee4f3db240f96f8b2d1216/t/60f1b4bdeb90970840e6ec49/1626453181661/192px-ThetaTau.png?format=1500w">
-<link rel="image_src" href="http://static1.squarespace.com/static/60ee4f3db240f96f8b2d1216/t/60f1b4bdeb90970840e6ec49/1626453181661/192px-ThetaTau.png?format=1500w">
+<link rel="image_src" href="images/logo.png">
 <meta itemprop="image" content="http://static1.squarespace.com/static/60ee4f3db240f96f8b2d1216/t/60f1b4bdeb90970840e6ec49/1626453181661/192px-ThetaTau.png?format=1500w">
 <meta name="twitter:title" content="Kappa Theta Pi - Vanderbilt">
 <meta name="twitter:image" content="http://static1.squarespace.com/static/60ee4f3db240f96f8b2d1216/t/60f1b4bdeb90970840e6ec49/1626453181661/192px-ThetaTau.png?format=1500w">
 <meta name="twitter:url" content="https://www.thetatau.Vanderbilt.edu">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="As the nation's oldest and foremost fraternity for engineers, Kappa Theta Pi focuses on developing leaders for profession, service, and About.">
-<meta name="description" content="As the nation's oldest and foremost fraternity for engineers, Kappa Theta Pi 
-focuses on developing leaders for profession, service, and About.">
+
 <link rel="preconnect" href="https://images.squarespace-cdn.com">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300">
 <script type="text/javascript" crossorigin="anonymous" defer="defer" nomodule="nomodule" src="//assets.squarespace.com/@sqs/polyfiller/1.6/legacy.js"></script>
