--- a/about.html
+++ b/about.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 </head>
-<body style="color: white; background-color: #2F4A8A;"> <!-- Adjust background color as desired -->
-    <h1>About Kappa Theta Pi</h1>
-    <p>Information about Kappa Theta Pi and its mission.</p>
-    <a href="home.html" style="color: white;">Back to Home</a>
+<body id="collection-about" class="page-about primary-button-style-solid ...">
+    <!-- Rest of the content -->
 </body>
+
 </html>
