--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <link rel="preconnect" href="https://images.squarespace-cdn.com">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300">
-    <script type="text/javascript" crossorigin="anonymous" defer="defer" nomodule="nomodule" src="//assets.squarespace.com/@sqs/polyfiller/1.6/legacy.js"></script>
+    <script type="text/javascript" crossorigin="anonymous" defer="defer" nomodule="nomodule" src="//Users/owusunp/ktp_pledge/Users/owusunp/ktp_pledge/Users/owusunp/ktp_pledge/Users/owusunp/ktp_pledge/assetsowusunp/ktp_pledge/assetsowusunp/ktp_pledge/assetsowusunp/ktp_pledge/assetsowusunp/ktp_pledge/assetsowusunp/ktp_pledge/assetsowusunp/ktp_pledge/assets.squarespace.com/@sqs/polyfiller/1.6/legacy.js"></script>
     <script type="text/javascript" crossorigin="anonymous" defer="defer" src="//assets.squarespace.com/@sqs/polyfiller/1.6/modern.js"></script>
     <script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
     <script>(function(rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//assets.squarespace.com/universal/scripts-compressed/extract-css-runtime-d86fba27cffd058af1db-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-extract_css_runtime');</script>
