--- a/brothers.html
+++ b/brothers.html
@@ -751,18 +751,20 @@
                         </div>
                     </div>
                   
-                    <!-- Tab Buttons Container (Separate from Content) -->
-                    <div class="brothers-flex-container" style="display: flex; justify-content: center; gap: 20px; margin: 20px auto; text-align: center; width: 100%;">
-                        <button class="brothers-button" onclick="showSection('Actives')" style="padding: 10px 20px; cursor: pointer; background-color: transparent; color: #333; border: none; font-size: 1em; font-weight: bold;">
-                            Actives
-                        </button>
-                        <button class="brothers-button" onclick="showSection('E-Board')" style="padding: 10px 20px; cursor: pointer; background-color: transparent; color: #333; border: none; font-size: 1em; font-weight: bold;">
-                            E-Board
-                        </button>
-                        <button class="brothers-button" onclick="showSection('Alumni')" style="padding: 10px 20px; cursor: pointer; background-color: transparent; color: #333; border: none; font-size: 1em; font-weight: bold;">
-                            Alumni
-                        </button>
-                    </div>
+<!-- Tab Buttons Container (Separate from Content) -->
+<div class="brothers-flex-container" style="display: flex; justify-content: center; gap: 20px; margin: 20px auto; text-align: center; width: 100%;">
+  <button class="brothers-button" onclick="showSection('Actives')" style="padding: 10px 20px; cursor: pointer; background-color: transparent; color: #333; border: none; font-size: 1em; font-weight: bold;">
+      Actives
+  </button>
+  <button class="brothers-button" onclick="showSection('E-Board')" style="padding: 10px 20px; cursor: pointer; background-color: transparent; color: #333; border: none; font-size: 1em; font-weight: bold;">
+      E-Board
+  </button>
+  <button class="brothers-button" onclick="showSection('Alumni')" style="padding: 10px 20px; cursor: pointer; background-color: transparent; color: #333; border: none; font-size: 1em; font-weight: bold;">
+      Alumni
+  </button>
+</div>
+
+<div style="width: 50%; border-bottom: 1px solid #333; margin: 10px auto;"></div>
 
     <!-- Content Container with Fixed Minimum Height -->
     <div class="content-container" style="width: 100%; max-width: 1200px; margin: 0 auto; padding: 20px; box-sizing: border-box; min-height: 600px;">
