--- a/home.html
+++ b/home.html
@@ -166,7 +166,7 @@
       </a>
     </div>
   
-    <header data-test="header" id="header" class="black header theme-col--primary" data-section-theme="black" data-controller="Header" data-current-styles="{
+    <header data-test="header" id="header" class="black header theme-col--primary" data-section-theme="white" data-controller="Header" data-current-styles="{
       &quot;layout&quot;: &quot;navRight&quot;,
       &quot;action&quot;: {
       &quot;href&quot;: &quot;/donate&quot;,
@@ -2112,7 +2112,7 @@ Contact
 &quot;typeName&quot;: &quot;page&quot;
 }" data-animation="none" data-controllers-bound="SectionWrapperController,SectionWrapperController" data-active="true">
 <div class="section-border">
-  <div class="section-background" style="background-color: black;">
+  <div class="section-background" style="background-color:  #2F4A8A;">
 
   
     
