--- a/about.html
+++ b/about.html
@@ -35,7 +35,14 @@
     <link rel="stylesheet" type="text/css" href="https://static1.squarespace.com/static/vta/5c5a519771c10ba3470d8101/versioned-assets/1728407958569-DI71YIND73BBQN7RBZCZ/static.css">
     <link rel="stylesheet" type="text/css" href="https://assets.squarespace.com/universal/styles-compressed/2356ee25bed07678b7ee-min.en-US.css">
     <style type="text/css">
- 
+ #footer-sections {
+    color: white !important;
+}
+
+#footer-sections * {
+    color: white !important;
+}
+
   /* Presidential Welcome Section */
   .presidential-section {
     display: flex;
