--- a/ktp_in_action.html
+++ b/ktp_in_action.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US" class="yui3-js-enabled js flexbox canvas canvastext webgl no-touch hashchange history draganddrop rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms no-csstransforms3d csstransitions video audio svg inlinesvg svgclippaths" style="--header-fixed-top-offset: 97.59375px; background-color: white; color: black;" id="yui_3_17_2_1_1730302289840_75">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -363,6 +362,46 @@
           margin-top: 10px;
           font-size: 1em;
           font-weight: bold;
+      }
+
+      .photo-grid {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 20px;
+      }
+
+      .gallery-image {
+          width: 200px; /* Adjust size as needed */
+          height: auto;
+          border-radius: 8px;
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      }
+
+      .gallery-container {
+          display: grid; 
+          grid-template-columns: repeat(3, 1fr); 
+          gap: 15px; 
+          padding: 20px; 
+          justify-items: center; 
+      }
+
+      .gallery-item {
+          max-width: 500px; 
+          border-radius: 8px; 
+          overflow: hidden; 
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+          transition: transform 0.3s; 
+      }
+
+      .gallery-item img {
+          width: 100%; 
+          height: auto; 
+          display: block; 
+      }
+
+      .gallery-item:hover {
+          transform: scale(1.05); 
       }
     </style>
   </head>
@@ -762,7 +801,37 @@
     </div>     
 <!-- start coding here -->
   
-   
+<h1 style="text-align: center; padding: 20px;">KTP In Action</h1>
+<div class="gallery-container">
+    <div class="gallery-item">
+        <img src="images/ktp1.JPEG" alt="Gallery Image 1">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp2.JPEG" alt="Gallery Image 2">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp3.JPEG" alt="Gallery Image 3">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp6.jpg" alt="Gallery Image 4">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp5.jpeg" alt="Gallery Image 5">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp10.jpg" alt="Gallery Image 6">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp7.jpg" alt="Gallery Image 4">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp8.jpg" alt="Gallery Image 5">
+    </div>
+    <div class="gallery-item">
+        <img src="images/ktp9.jpg" alt="Gallery Image 6">
+    </div>
+</div>
+
 
 <!-- end coding here -->
               </div>
