updates to home

--- a/home.html
+++ b/home.html
@@ -1786,9 +1786,10 @@ Brothers
   <script>
     // Array of image paths (ensure the paths are accessible and relative to your HTML file if not in the root directory)
     const images = [
-        "images/ktp1.JPEG",
-        "images/ktp2.JPEG",
-        "images/ktp3.JPEG"
+        "images/home1.JPEG",
+        "images/ktp10.png",
+        "images/ktp3.JPEG",
+        "images/home3.JPEG"
     ];
 
     let currentIndex = 0;
