Update about and home pages

--- a/home.html
+++ b/home.html
@@ -1424,7 +1424,7 @@ Learn about us
     <div class="sqs-layout sqs-grid-12 columns-12" data-type="page-section" id="page-section-60f3a43236db646251a3cb7c"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-3bceeb77ebec9263119d"><div class="sqs-block-content">
 
 <div class="sqs-html-content">
-<h4 style="white-space:pre-wrap;">Get involved.</h4><h2 style="white-space:pre-wrap;">See what makes KTP stand out, and more about our Recruitment process.</h2>
+<h4 style="white-space:pre-wrap;">Get involved.</h4><h2 style="white-space:pre-wrap;">See what makes KTP stand out and more about our Recruitment process.</h2>
 </div>
 
 
