--- a/recruitment.html
+++ b/recruitment.html
@@ -824,7 +824,7 @@
                     <!-- Title -->
                     <div class="header-title" data-animation-role="header-element">
                       <div class="header-title-logo">
-                        <a href="home.html" data-animation-role="header-element">
+                        <a href="index.html" data-animation-role="header-element">
                           <img elementtiming="nbf-header-logo-desktop" 
                                src="images/logo.png" 
                                alt="Kappa Theta Pi - Vanderbilt" 
