--- a/ktp_in_action.html
+++ b/ktp_in_action.html
@@ -384,7 +384,7 @@
                         </div>
                         
                         <div class="header-nav-item header-nav-item--collection">
-                          <a href="Recruitment.html" data-animation-role="header-element">
+                          <a href="recruitment.html" data-animation-role="header-element">
                             Recruitment
                           </a>
                         </div>
