--- a/recruitment.html
+++ b/recruitment.html
@@ -850,7 +850,7 @@
                           </div>
                           
                           <div class="header-nav-item header-nav-item--collection">
-                            <a href="Recruitment.html" data-animation-role="header-element">
+                            <a href="recruitment.html" data-animation-role="header-element">
                               Recruitment
                             </a>
                           </div>
@@ -932,7 +932,7 @@
                           </div>
                           
                           <div class="header-nav-item header-nav-item--collection">
-                            <a href="Recruitment.html" data-animation-role="header-element">
+                            <a href="recruitment.html" data-animation-role="header-element">
                               Recruitment
                             </a>
                           </div>
