--- a/recruitment.html
+++ b/recruitment.html
@@ -1173,7 +1173,7 @@
                   Who can rush KTP?
                 </button>
                 <div class="accordion-content">
-                  <p>Anyone is allowed to rush KTP—we gladly accept (and encourage) rushees from all disciplines, years, and majors! Our only requirement is that you have at least 3 quarters remaining as a full-time student in The College.</p>
+                  <p>Anyone is allowed to rush KTP—we gladly accept (and encourage) rushees from all disciplines, years, and majors! Our only requirement is that you have at least 2 semesters remaining as a full-time student in The College.</p>
                 </div>
               </div>
               
