--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
        <div class="sqs-layout sqs-grid-12 columns-12" data-type="page-section" id="page-section-60ee545f77e2cd4113f18f3b"><div class="row sqs-row"><div class="col sqs-col-12 span-12"><div class="sqs-block html-block sqs-block-html" data-block-type="2" id="block-a5dcf34f066abb34daac"><div class="sqs-block-content">
    
    <div class="sqs-html-content">
-   <h1 style="white-space:pre-wrap;">Kappa Theta Pi</h1><p class="" style="white-space:pre-wrap;">Vanderbilt’s only Professional Engineering Fraternity.</p>
+   <h1 style="white-space:pre-wrap;">Kappa Theta Pi</h1><p class="" style="white-space:pre-wrap;">Vanderbilt’s only Professional Technology Fraternity.</p>
    </div>
    
    </div></div><div class="sqs-block button-block sqs-block-button" data-block-type="53" id="block-cc3cbc334b9295b12ac9"><div class="sqs-block-content" id="yui_3_17_2_1_1730302289840_83">
