sophia no founder

--- a/brothers.html
+++ b/brothers.html
@@ -1320,7 +1320,7 @@
                   </div>
               </div>
               <div class="profile-name" style="margin-top: 10px; font-size: 1.1em; font-weight: bold;">Sophia Pieri</div>
-              <div class="profile-bio-title" style="font-size: 1.2em; font-weight: bold;">VP of Marketing - Founder</div>
+              <div class="profile-bio-title" style="font-size: 1.2em; font-weight: bold;">VP of Marketing</div>
               <div class="profile-bio" style="font-size: 0.95em; color: #333; margin-top: 10px; text-align: left;">
                   Establishes consistent branding, develops marketing strategies, and responsible for promoting KTP on campus. Runs KTP social media and apparel.
               </div>
