HomePage Styles.css and Index.html minor updates

--- a/index-inProgress.html
+++ b/index-inProgress.html
@@ -19,14 +19,13 @@
     </a>
   </div>
   <ul class="nav-links">
-    <li><a href="about.html">About</a></li>
-    <li><a href="recruitment.html">Recruitment</a></li>
-    <li><a href="brothers.html">Brothers</a></li>
-    <li><a href="ktp_in_action.html">KTP in Action</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
+  <li><a href="about.html" class="btn">About</a></li>
+  <li><a href="recruitment.html" class="btn">Recruitment</a></li>
+  <li><a href="brothers.html" class="btn">Brothers</a></li>
+  <li><a href="ktp_in_action.html" class="btn">KTP in Action</a></li>
+  <li><a href="contact.html" class="btn">Contact</a></li>
+</ul>
 </nav>
-
 
   <img src="images/campus.jpg" alt="CAMPUS" class="hero-bg" />
   
