--- a/recruitment.html
+++ b/recruitment.html
@@ -6,6 +6,10 @@
   <title>Kappa Theta Pi – Vanderbilt</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="images/logo.png">
+  
+  <!-- Footer Styles -->
+  <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
+  
   <style>
     :root {
       --primary: #2F4A8A;
@@ -245,58 +249,7 @@
       padding: 10px 0;
     }
 
-    /* FOOTER */
-    footer {
-      background: var(--primary);
-      color: var(--white);
-      padding: 60px 40px;
-    }
 
-    .footer-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-
-    .footer-left h3 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-
-    .footer-left p {
-      font-size: 1rem;
-      color: #ccc;
-    }
-
-    .footer-right h4 {
-      font-size: 1.1rem;
-      margin-bottom: 15px;
-      font-weight: 600;
-    }
-
-    .footer-right ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .footer-right li {
-      margin-bottom: 10px;
-    }
-
-    .footer-right a {
-      color: #ffffff;
-      text-decoration: none;
-      border-bottom: 1px solid transparent;
-      transition: border-bottom 0.2s ease;
-      font-size: 1rem;
-    }
-
-    .footer-right a:hover {
-      border-bottom: 1px solid #ffffff;
-    }
 
 
     @media (max-width: 768px) {
@@ -390,23 +343,8 @@
   </div>
 </section>
 
-<footer>
-  <div class="footer-container">
-    <div class="footer-left">
-      <h3>Kappa Theta Pi – Vanderbilt</h3>
-      <p>© Kappa Theta Pi</p>
-    </div>
-    <div class="footer-right">
-      <h4>Links</h4>
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="recruitment.html">Recruitment</a></li>
-        <li><a href="ktp_in_action.html">KTP in Action</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</footer>
+<!-- Footer Component -->
+<script src="js/footer.js"></script>
 
 <script>
   // Slideshow
