--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       background-color: #22366c;
     }
 
-    /* Hero section - adjusted for component header */
+    /* Hero section - standard layout without header overrides */
     .hero {
       position: relative;
       height: 100vh;
@@ -373,34 +373,6 @@
     .learn-more-content .btn:hover {
       background-color: #ddd;
     }
-
-    /* Override header for hero layout */
-    header {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 999;
-      background: transparent !important;
-    }
-
-    /* Make nav links white on hero */
-    header .nav-links a {
-      color: white !important;
-    }
-
-    header .nav-links a:hover {
-      color: #ccc !important;
-    }
-
-    /* Style the header title for hero overlay */
-    .header-title-logo .greek-letters {
-      color: white !important;
-    }
-
-    .header-title-logo .chapter-text {
-      color: white !important;
-    }
   </style>
 </head>
 
@@ -408,7 +380,7 @@
   <!-- Header will be injected by component -->
   
   <section class="hero">
-    <img src="images/home1.jpeg" alt="KTP Campus" class="hero-bg" />
+    <img src="images/campus.jpg" alt="CAMPUS" class="hero-bg" />
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>Kappa Theta Pi</h1>
@@ -440,7 +412,7 @@
     </section>
 
     <section class="section brothers-fullscreen">
-      <img src="images/ktp8.jpg" alt="KTP Brothers" class="brothers-bg" />
+      <img src="images/learnAboutOurBrothersBackGround.png" alt="Vanderbilt Logo" class="brothers-bg" />
       <div class="brothers-overlay"></div>
       <div class="brothers-content">
         <h2>Get ahead.</h2>
