fixed a brothers links

--- a/brothers.html
+++ b/brothers.html
@@ -502,7 +502,7 @@
                     <div class="profile-image-container">
                         <img src="assets/brother-images/Citiana.jpeg" alt="Citiana Frew" class="profile-image">
                         <div class="linkedin-overlay">
-                            <a href="#" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/citiana-a-frew/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                                 <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                                 <span>View Profile</span>
                             </a>
