--- a/about.html
+++ b/about.html
@@ -1028,19 +1028,40 @@
       <h1 class="page-title">About Kappa Theta Pi</h1>
       <p class="page-subtitle">Building the future of technology through brotherhood, innovation, and professional excellence</p>
   </section>
-  
-  <!-- Presidential Welcome Section -->
+
+    <!-- President's Welcome Section -->
+    <section class="presidential-section">
+        <div class="presidential-image-container">
+            <img src="assets/founders-images/LudvigHS.JPG" alt="Ludvig Denker - President" class="presidential-image" loading="lazy">
+        </div>
+        <div class="presidential-content">
+            <h2>A Presidential Welcome</h2>
+            <p>
+                Welcome to Vandy KTP! My name is Ludvig, and I am a co-founder of KTP's Rho Chapter and the current President.
+            </p>
+            <p>
+                KTP holds a special part of my Vanderbilt experience and is a truly unique organization. It is in a class of its own among student organizations at Vanderbilt, and it’s been a privilege to be a co-founder and now President of Vanderbilt’s only pre-professional technology fraternity.
+            </p>
+            <p>
+                KTP comprises of many different aspects centered around 4 pillars: Professional Development, Enrichment, Academic Support, and Social Events. We host numerous events each semester within each category, and our brothers truly enjoy and benefit from everything we do.
+            </p>
+            <p>
+                On behalf of all of us at KTP, I want to thank you for checking out our website and learning more about the organization. We conduct rush at the beginning of each semester and encourage everyone with an interest in tech to apply! We hope to get to know you soon!
+            </p>
+        </div>
+
+    <!-- Founder's Welcome Section -->
   <section class="presidential-section">
       <div class="presidential-image-container">
-          <img src="assets/founders-images/HaleyHS.JPG" alt="Haley Kahn - President" class="presidential-image" loading="lazy">
+          <img src="assets/founders-images/HaleyHS.JPG" alt="Haley Kahn - Founder" class="presidential-image" loading="lazy">
                       </div>
       <div class="presidential-content">
-          <h2>A Presidential Welcome</h2>
+          <h2>A Founder's Welcome</h2>
           <p>
-              Welcome to KTP's official website! My name is Haley Kahn, and I am a founder of KTP and the presiding president of KTP's Rho Chapter. I decided to found KTP at Vandy in order to fill a whitespace. I noticed that despite CS being one of the largest and fastest-growing majors at Vandy, there lacked a community for tech-oriented individuals.
+              Welcome to KTP's official website! My name is Haley Kahn, and I am a founder of KTP's Rho Chapter. I decided to found KTP at Vandy in order to fill a whitespace. I noticed that despite CS being one of the largest and fastest-growing majors at Vandy, there lacked a community for tech-oriented individuals.
           </p>
           <p>
-              While there existed organizations that focused specifically on programming or niches in computer science, there was little in the way of professional development combined with a social community. In KTP's short time as an organization on campus, we have welcomed many new members and held official recruitment events, workshops, speaker events, and we are looking forward to events with recruiters this fall!
+              While there existed organizations that focused specifically on programming or niches in computer science, there was little in the way of professional development combined with a social community. In KTP's short time as an organization on campus, we have welcomed many new members and held official recruitment events, workshops, speaker events, and events with recruiters!
           </p>
           <p>
               Being a pre-professional fraternity, we value having amazing opportunities for our members. This means connecting with faculty, networking with other students, and even getting amazing speakers from Fortune 500 companies to come speak and connect with us. As professional as we are, we also want to build a social organization here on campus!
