update color on recruitment page

--- a/recruitment.html
+++ b/recruitment.html
@@ -88,7 +88,7 @@
 
     /* HERO */
     .hero {
-      background-color: var(--black);
+      background-color: var(--white);
       color: var(--white);
       padding: 80px 20px;
       text-align: center;
@@ -300,8 +300,8 @@
 <section class="hero">
   <h1>Why rush Kappa Theta Pi?</h1>
   <h2>Academic & Professional Development</h2>
-  <p>Coming from a variety of fields and backgrounds, our brothers’ work experience and connections last a lifetime. <br />
-    <span style="color: #ccc;">Below is a preview of a few of the places where our members make an impact:</span>
+  <p> <span style="color: black;"> Coming from a variety of fields and backgrounds, our brothers’ work experience and connections last a lifetime. <br />
+    Below is a preview of a few of the places where our members make an impact:</span>
   </p>
 </section>
 
