--- a/home.html
+++ b/home.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" type="text/css" href="https://static1.squarespace.com/static/versioned-site-css/60ee4f3db240f96f8b2d1216/31/5c5a519771c10ba3470d8101/60ee4f3db240f96f8b2d1230/1573/site.css">
 
   <link rel="stylesheet" type="text/css" href="https://static1.squarespace.com/static/vta/5c5a519771c10ba3470d8101/versioned-assets/1728407958569-DI71YIND73BBQN7RBZCZ/static.css">
+<title>Kappa Theta Pi Vanderbilt | Technology & Innovation Fraternity</title>
+<meta name="description" content="Explore Vanderbilt computer science, engineering, and technology through Kappa Theta Pi, the university’s premier professional technology fraternity.">
+<link rel="canonical" href="https://ktpvandy.org/home.html">
+<meta name="keywords" content="Vanderbilt computer science, Vanderbilt technology, Vanderbilt School of Engineering, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt School of Engineering reviews, Vanderbilt computer science ranking, Vanderbilt technology courses, Vanderbilt engineering majors, Vanderbilt engineering acceptance rate, Vanderbilt engineering ranking">
 
 <style type="text/css">
   @import url(https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap);
