--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/header-styles/header.css">
   <link rel="stylesheet" href="css/footer-styles/footer.css">
+  <title>Kappa Theta Pi Vanderbilt | Technology, Computer Science & Engineering</title>
+<meta name="description" content="Kappa Theta Pi is Vanderbilt's premier professional technology fraternity. Learn about computer science, the School of Engineering, and innovation at the Wond’ry.">
+<link rel="canonical" href="https://ktpvandy.org/">
+<meta name="keywords" content="Vanderbilt computer science, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt technology courses, Vanderbilt Wond'ry, the Wond'ry, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help, Vanderbilt engineering acceptance rate, Vanderbilt engineering ranking, Vanderbilt engineering majors, Vanderbilt engineering curriculum, Vanderbilt engineering minors, Vanderbilt aerospace engineering, Vanderbilt mechanical engineering, Vanderbilt electrical engineering, Kappa Theta Pi Vanderbilt, technology fraternity Vanderbilt">
+
   
   <style>
     body,
