--- a/ktp_in_action.html
+++ b/ktp_in_action.html
@@ -18,6 +18,11 @@
   <!-- Header & Footer external styles (unchanged) -->
   <link rel="stylesheet" type="text/css" href="css/header-styles/header.css" />
   <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css" />
+  <title>Kappa Theta Pi in Action | Vanderbilt Innovation & Technology</title>
+<meta name="description" content="See how Kappa Theta Pi drives innovation at Vanderbilt through technology projects, computer science, and engineering activities at the Wond’ry.">
+<link rel="canonical" href="https://ktpvandy.org/ktp_in_action.html">
+<meta name="keywords" content="Vanderbilt technology, Vanderbilt computer science, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering ranking, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering">
+
 
   <style>
     :root {
