--- a/pages/about.html
+++ b/pages/about.html
@@ -1012,7 +1012,13 @@
           --border: #475569;
       }
   }
+  
 </style>
+<title>About Kappa Theta Pi | Vanderbilt’s Technology Fraternity</title>
+<meta name="description" content="Learn about Kappa Theta Pi at Vanderbilt, a professional technology fraternity supporting students in computer science, engineering, and innovation at the Wond’ry.">
+<link rel="canonical" href="https://ktpvandy.org/about.html">
+<meta name="keywords" content="Kappa Theta Pi Vanderbilt, Vanderbilt computer science, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt engineering majors, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering">
+
 </head>
 
 <body>
