--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,6 +20,13 @@
   
   <!-- Footer Styles -->
   <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
+  <title>Contact Kappa Theta Pi | Vanderbilt Technology Fraternity</title>
+<meta name="description" content="Contact Kappa Theta Pi at Vanderbilt University to learn more about computer science, engineering, technology, and innovation opportunities.">
+<link rel="canonical" href="https://ktpvandy.org/contact.html">
+<meta name="keywords" content="Contact Vanderbilt fraternities, Vanderbilt computer science, Vanderbilt technology, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, the Wond'ry, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
+
+
+  
 
   <style>
     :root {
