--- a/recruitment.html
+++ b/recruitment.html
@@ -16,6 +16,11 @@
   
   <!-- Footer Styles -->
   <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
+  <title>Join Kappa Theta Pi | Vanderbilt Technology Fraternity Recruitment</title>
+<meta name="description" content="Apply to join Kappa Theta Pi at Vanderbilt. Recruitment for students in computer science, engineering, technology, and innovation at the Wond’ry.">
+<link rel="canonical" href="https://ktpvandy.org/recruitment.html">
+<meta name="keywords" content="Vanderbilt fraternity recruitment, Vanderbilt computer science, Vanderbilt technology fraternity, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, Vanderbilt engineering acceptance rate, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering curriculum, Vanderbilt engineering minors">
+
   
   <style>
     :root {
