--- a/pages/brothers.html
+++ b/pages/brothers.html
@@ -15,6 +15,12 @@
     
     <!-- Footer Styles -->
     <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
+    <title>Kappa Theta Pi Vanderbilt | Brothers</title>
+<meta name="description" content="Meet the brothers of Kappa Theta Pi at Vanderbilt: leaders in computer science, engineering, and technology innovation across the School of Engineering and the Wond’ry.">
+<link rel="canonical" href="https://ktpvandy.org/brothers.html">
+<meta name="keywords" content="Vanderbilt computer science, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt Wond'ry, Vanderbilt engineering majors, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
+
+    
 
     <style>
         :root {
