added brothers image

--- a/home.html
+++ b/home.html
@@ -115,6 +115,7 @@
       }
   }
 </style>
+<meta name="google-site-verification" content="6eqJ8v-aLbCYjf7VrvS45d8JDUze6M1AZIAu3txJI3E" />
 </head>
 
 <body>
