--- a/brothers.html
+++ b/brothers.html
@@ -1113,7 +1113,7 @@
           <!-- Yehan Subasinghe -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/Yehan.jpg" alt="Yehan Subasinghe" class="profile-image">
+              <img src="assets/brother-images/YehanS.jpeg" alt="Yehan Subasinghe" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/yehansubasinghe/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
