--- a/ktp_in_action.html
+++ b/ktp_in_action.html
@@ -2,242 +2,193 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KTP in Action - Kappa Theta Pi Vanderbilt</title>
 
-  <link rel="icon" type="image/x-icon" href="images/logo.png" />
-  <link rel="manifest" href="/manifest.json" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="icon" href="images/logo.png">
+  <link rel="manifest" href="/manifest.json">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 
-  <!-- Cache Manager -->
-  <script src="js/cache-manager.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/header-styles/header.css">
+  <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-
-  <!-- Header & Footer external styles (unchanged) -->
-  <link rel="stylesheet" type="text/css" href="css/header-styles/header.css" />
-  <link rel="stylesheet" type="text/css" href="css/footer-styles/footer.css" />
-  <title>Kappa Theta Pi in Action | Vanderbilt Innovation & Technology</title>
-<meta name="description" content="See how Kappa Theta Pi drives innovation at Vanderbilt through technology projects, computer science, and engineering activities at the Wond’ry.">
-<link rel="canonical" href="https://ktpvandy.org/ktp_in_action.html">
-<meta name="keywords" content="Vanderbilt technology, Vanderbilt computer science, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering ranking, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering">
-
+  <meta name="description" content="See how Kappa Theta Pi drives innovation at Vanderbilt through technology projects, computer science, and engineering activities at the Wond’ry.">
+  <link rel="canonical" href="https://ktpvandy.org/ktp_in_action.html">
+  <meta name="keywords" content="Vanderbilt technology, Vanderbilt computer science, Vanderbilt School of Engineering, Vanderbilt Wond'ry, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering ranking, Vanderbilt electrical engineering">
 
   <style>
-    :root {
-      --primary: #2f4a8a;
-      --white: #ffffff;
-      --black: #000000;
-      --gray: #f4f4f4;
-    }
-
-    /* Hide scrollbar on all browsers */
-    html {
-      overflow-y: scroll;
-      scrollbar-width: none; /* Firefox */
-      -ms-overflow-style: none; /* IE 10+ */
-      height: 100%; /* for sticky footer layout */
-    }
-    html::-webkit-scrollbar { display: none; }
-
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-
+    :root { --primary:#2F4A8A; --white:#fff; --black:#000; --gray:#f4f4f4; }
+    html { overflow-y:scroll; scrollbar-width:none; -ms-overflow-style:none; }
+    html::-webkit-scrollbar { display:none; }
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
-      font-family: 'Roboto', 'Arial', sans-serif;
-      font-weight: 300;
-      background-color: var(--white);
-      color: var(--black);
-      overflow-x: hidden;
-      min-height: 100dvh;
-      display: flex;          /* sticky footer layout */
-      flex-direction: column; /* sticky footer layout */
+      font-family:'Roboto','Arial',sans-serif;
+      background:var(--white); color:var(--black); line-height:1.6;
+      overflow-x:hidden; min-height:100dvh; display:flex; flex-direction:column;
     }
 
-    /* Main Content */
-    .main-content { padding-top: 0; flex: 1 0 auto; }
-    .main-content { padding-bottom: 80px; } /* ensure gallery never touches footer */
-    @media (max-width: 576px) { .main-content { padding-bottom: 100px; } }
+    .main-content { flex:1 0 auto; padding:16px 0 90px; }
+    /* Add comfy edge padding just for the main content */
+    .main-content.container { 
+      padding-left: clamp(16px, 5vw, 48px);
+      padding-right: clamp(16px, 5vw, 48px);
+    }
+    @media (max-width:576px){ .main-content { padding-bottom:110px; } }
 
-    /* Gallery (kept as-is, just deduped) */
-    .gallery-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      justify-items: center;
-    }
-    .gallery-item {
-      max-width: 500px;
-      width: 100%;
-      height: 350px;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 17%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s;
-    }
-    .gallery-item img { width: 100%; height: 100%; object-fit: cover; display: block; }
-    .gallery-item:hover { transform: scale(1.05); }
+    @keyframes slideInUp { from {opacity:0; transform:translateY(30px);} to {opacity:1; transform:none;} }
+    .page-title { animation: slideInUp .8s ease-out; }
 
-    @media (max-width: 768px) {
-      .gallery-container {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 15px;
-        padding: 15px;
-      }
-      .gallery-item { max-width: 400px; height: 300px; }
+    /* Gallery: full images (no cropping), rounded corners, hover lift */
+    .row.gallery { --bs-gutter-x: 1.5rem; --bs-gutter-y: 1.5rem; }
+    /* removed extra .col padding to avoid squeezing columns */
+    .row.gallery img.img-fluid {
+      width:100%;
+      height:auto;
+      display:block;
+      border-radius:16px;
+      transition: transform .25s ease, box-shadow .25s ease;
     }
-    @media (max-width: 480px) {
-      .gallery-container { grid-template-columns: 1fr; gap: 15px; padding: 10px; }
-      .gallery-item { max-width: 100%; height: 250px; }
+    .row.gallery img.img-fluid:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 24px rgba(0,0,0,.12);
     }
 
-    /* Fixed small typo/units and removed duplicate .gallery-img rules */
-    @media (max-width: 600px) {
-      .main-content {
-        height: 30px;
-        width: 30px;      /* was 'width:30' without unit; keeping minimal/no visual impact */
-        font-size: 1rem;
-        text-align: center;
-      }
-    }
+    /* Reveal-on-scroll */
+    .reveal { opacity:0; transform:translateY(40px) scale(.98); }
+    .reveal.in-view { opacity:1; transform:none; transition: all .6s cubic-bezier(.4,0,.2,1); }
 
-    .img-card { position: relative; overflow: hidden; border-radius: 17%; }
-    .img-card::after {
-      content: "";
-      position: absolute; inset: 0; pointer-events: none;
-      background-image:
-        radial-gradient(circle, rgba(255,255,255,0.8) 0 2px, transparent 3px),
-        radial-gradient(circle, rgba(255,255,255,0.6) 0 1.5px, transparent 2.5px),
-        radial-gradient(circle, rgba(255,255,255,0.7) 0 2px, transparent 3px);
-      background-repeat: repeat;
-      background-size: 80px 80px, 120px 120px, 100px 100px;
-      opacity: 0;
-      animation: sparkle 2s infinite ease-in-out;
-      transition: opacity 0.4s ease;
-    }
-    @keyframes sparkle {
-      0%, 100% { background-position: 0 0, 40px 40px, 20px 60px; }
-      50%      { background-position: 20px 20px, 60px 80px, 40px 0; }
-    }
-
-    /* Ultra-wide additions (kept) */
-    @media (min-width: 1920px) {
-      .row.cols-ultra-6 > .col { flex: 0 0 auto; width: calc(100% / 6); }
-      .gallery-img { height: 420px; }
-    }
-    @media (min-width: 2560px) {
-      .row.cols-ultra-7 > .col { flex: 0 0 auto; width: calc(100% / 7); }
-      .gallery-img { height: 480px; }
-    }
-
-    /* FOOTER — keep design, scale relative to width, no wrap */
     .site-footer {
-      background: #2f4a8a;   /* your blue */
-      color: #fff;
-      /* Scale font + padding with viewport, but clamp to sane bounds */
-      font-size: clamp(0.75rem, 0.85rem + 0.3vw, 1rem);
-      line-height: 1.5;
-      padding: clamp(16px, 2vw, 40px) clamp(12px, 1.5vw, 20px);
-      flex-shrink: 0;        /* never collapse */
-      width: 100%;
-      height: auto;
-      overflow: hidden;
+      background:#2F4A8A; color:#fff;
+      font-size:clamp(.75rem,.85rem + .3vw,1rem);
+      line-height:1.5; padding:clamp(16px,2vw,40px) clamp(12px,1.5vw,20px);
+      flex-shrink:0; width:100%;
+    }
+    .site-footer .row { flex-wrap:nowrap !important; justify-content:space-between; align-items:center; overflow-x:auto; gap:12px; scrollbar-width:none; -ms-overflow-style:none; }
+    .site-footer .row::-webkit-scrollbar { display:none; }
+    .site-footer .row > [class^="col"] { flex:0 0 auto; white-space:nowrap; }
+    .site-footer .container { padding:0; }
+    .site-footer img, .site-footer svg { max-width:100%; height:auto; }
+
+    @media (prefers-reduced-motion: reduce) {
+      .reveal, .reveal.in-view { opacity: 1 !important; transform: none !important; transition: none !important; }
     }
 
-    /* Keep footer columns on one line; allow horizontal scroll if needed */
-    .site-footer .row {
-      flex-wrap: nowrap !important;
-      justify-content: space-between;
-      align-items: center;
-      overflow-x: auto;
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-      gap: 12px;
-    }
-    .site-footer .row::-webkit-scrollbar { display: none; }
-
-    /* Prevent column shrink/compression */
-    .site-footer .row > [class^="col"] {
-      flex: 0 0 auto;
-      white-space: nowrap;
-    }
-
-    .site-footer .container { padding: 0; } /* external footer.css padding remains; we scale via clamp */
-    .site-footer img, .site-footer svg { max-width: 100%; height: auto; }
-    /* FIX: let content show at small widths */
-@media (max-width: 600px){
-  .main-content {
-    height: auto !important;
-    width: auto !important;
-  }
-}
-/* Pull gallery closer to the top */
-.main-content {
-  margin-top: 0 !important;   /* override any Bootstrap mt-* */
-  padding-top: 0 !important;
+    /* KTP in Action title styling */
+.page-title {
+  color: var(--primary) !important;
+  font-weight: 700;
+  font-style: italic;
+  letter-spacing: .2px;
+  text-align: center;
+  font-size: clamp(1.8rem, 1.1rem + 2.2vw, 2.8rem);
+  margin-bottom: .35rem;
 }
 
-/* Optional: keep a tiny breathing space on big screens */
-@media (min-width: 992px) {
-  .main-content { margin-top: 0.5rem !important; }
+.page-subtitle {
+  color: var(--primary);
+  font-weight: 700;
+  text-align: center;
+  font-size: clamp(1.1rem, .8rem + 1vw, 1.6rem);
+  margin-bottom: .75rem;
 }
 
-/* Optional: slight “closer” feel via subtle zoom */
-.gallery-item img {
-  transform: scale(1.03);
-  transition: transform 0.25s ease;
+/* thin underline for a polished header look */
+.title-underline {
+  width: clamp(120px, 20vw, 260px);
+  height: 3px;
+  background: currentColor;
+  color: var(--primary);
+  opacity: .25;
+  border-radius: 999px;
+  margin: 6px auto 0;
 }
-.gallery-item:hover img {
-  transform: scale(1.08);
-}
-
 
   </style>
+
+  <!-- (Optional) lazy-loading hint – safe even if it runs early -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('.gallery img').forEach(img => {
+        img.setAttribute('loading','lazy');
+        img.setAttribute('decoding','async');
+      });
+    });
+  </script>
 </head>
-
 <body>
-  <!-- Header injected by header.js -->
+
+  <script src="js/header.js"></script>
+
+  <!-- Keep your navbar if you need it; leaving as-is from your last version -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white border-top border-bottom">
+    <div class="container">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+              aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
+        <ul class="navbar-nav mb-2 mb-lg-0 text-center">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="recruitment.html">Recruitment</a></li>
+          <li class="nav-item"><a class="nav-link" href="brothers.html">Brothers</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="ktp_in_action.html">KTP in Action</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <main class="main-content container">
-    <div style="height: 10px; width: 25%;"></div>
+    <header class="text-center mb-3">
+      <h1 class="page-title fw-bold" style="color:var(--primary); letter-spacing:.2px;"></h1>
+    </header>
 
-    <div class="row row-cols-4 g-4">
-      <div class="col"><img src="images/20240317_204023_BC4B2D (1).JPEG" class="img-fluid rounded" alt="Gallery Image 1" /></div>
-      <div class="col"><img src="images/IMG_2241.jpg" class="img-fluid rounded" alt="Gallery Image 2" /></div>
-      <div class="col"><img src="images/20240421_102232_B3884D.jpg" class="img-fluid rounded" alt="Gallery Image 3" /></div>
-      <div class="col"><img src="images/ktp6.jpg" class="img-fluid rounded" alt="Gallery Image 4" /></div>
+    <!-- 2 on phones, 3 on smaller laptops (lg ≥992px), 4 on big screens (xl ≥1200px) -->
+    <div class="row row-cols-2 row-cols-lg-3 row-cols-xl-4 g-4 gallery">
+      <div class="col reveal"><img src="images/20240317_204023_BC4B2D (1).JPEG" class="img-fluid" alt="Gallery Image 1"></div>
+      <div class="col reveal"><img src="images/IMG_2241.jpg" class="img-fluid" alt="Gallery Image 2"></div>
+      <div class="col reveal"><img src="images/20240421_102232_B3884D.jpg" class="img-fluid" alt="Gallery Image 3"></div>
+      <div class="col reveal"><img src="images/ktp6.jpg" class="img-fluid" alt="Gallery Image 4"></div>
 
-      <div class="col"><img src="images/ktp5.jpg" class="img-fluid rounded" alt="Gallery Image 5" /></div>
-      <div class="col"><img src="images/ktp10.jpg" class="img-fluid rounded" alt="Gallery Image 6" /></div>
-      <div class="col"><img src="images/20240929_195838_B9392B.jpg" class="img-fluid rounded" alt="Gallery Image 7" /></div>
-      <div class="col"><img src="images/ktp8.jpg" class="img-fluid rounded" alt="Gallery Image 8" /></div>
+      <div class="col reveal"><img src="images/ktp5.jpg" class="img-fluid" alt="Gallery Image 5"></div>
+      <div class="col reveal"><img src="images/ktp10.jpg" class="img-fluid" alt="Gallery Image 6"></div>
+      <div class="col reveal"><img src="images/20240929_195838_B9392B.jpg" class="img-fluid" alt="Gallery Image 7"></div>
+      <div class="col reveal"><img src="images/ktp8.jpg" class="img-fluid" alt="Gallery Image 8"></div>
 
-      <div class="col"><img src="images/ktp9.jpg" class="img-fluid rounded" alt="Gallery Image 9" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20240221_212408_B620B0 (1).JPEG" class="img-fluid rounded" alt="Gallery Image 10" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20240411_144339_B41C7F.JPEG" class="img-fluid rounded" alt="Gallery Image 11" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20241008_174906_B80125.JPEG" class="img-fluid rounded" alt="Gallery Image 12" /></div>
+      <div class="col reveal"><img src="images/ktp9.jpg" class="img-fluid" alt="Gallery Image 9"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20240221_212408_B620B0 (1).JPEG" class="img-fluid" alt="Gallery Image 10"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20240411_144339_B41C7F.JPEG" class="img-fluid" alt="Gallery Image 11"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20241008_174906_B80125.JPEG" class="img-fluid" alt="Gallery Image 12"></div>
 
-      <div class="col"><img src="./images/in_action_imgs/20241011_172430_B93AE2.JPEG" class="img-fluid rounded" alt="Gallery Image 13" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20241113_214147_BBD666 (1).JPEG" class="img-fluid rounded" alt="Gallery Image 14" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20250403_205343_BFA1AB (2).JPEG" class="img-fluid rounded" alt="Gallery Image 15" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20250108_031623_B6226A.JPEG" class="img-fluid rounded" alt="Gallery Image 16" /></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20241011_172430_B93AE2.JPEG" class="img-fluid" alt="Gallery Image 13"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20241113_214147_BBD666 (1).JPEG" class="img-fluid" alt="Gallery Image 14"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20250403_205343_BFA1AB (2).JPEG" class="img-fluid" alt="Gallery Image 15"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20250108_031623_B6226A.JPEG" class="img-fluid" alt="Gallery Image 16"></div>
 
-      <div class="col"><img src="./images/in_action_imgs/20250403_205628_B47813.jpg" class="img-fluid rounded" alt="Gallery Image 17" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20240420_133053_BBE9D4.jpg" class="img-fluid rounded" alt="Gallery Image 18" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20250417_215103_B1DA7D (5).jpg" class="img-fluid rounded" alt="Gallery Image 19" /></div>
-      <div class="col"><img src="./images/in_action_imgs/20241118_142052_B5668F.jpg" class="img-fluid rounded" alt="Gallery Image 20" /></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20250403_205628_B47813.jpg" class="img-fluid" alt="Gallery Image 17"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20240420_133053_BBE9D4.jpg" class="img-fluid" alt="Gallery Image 18"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20250417_215103_B1DA7D (5).jpg" class="img-fluid" alt="Gallery Image 19"></div>
+      <div class="col reveal"><img src="./images/in_action_imgs/20241118_142052_B5668F.jpg" class="img-fluid" alt="Gallery Image 20"></div>
     </div>
   </main>
 
-  <!-- Footer injected by footer.js -->
-  <script src="js/header.js"></script>
   <script src="js/footer.js"></script>
-
-  <!-- Keep a footer root for injection if your script expects it -->
   <footer class="site-footer"></footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const els = document.querySelectorAll('.reveal');
+      if (!('IntersectionObserver' in window)) { els.forEach(el => el.classList.add('in-view')); return; }
+      const io = new IntersectionObserver((entries) => {
+        entries.forEach(e => { if (e.isIntersecting) { e.target.classList.add('in-view'); io.unobserve(e.target); } });
+      }, { threshold: 0.18, rootMargin: "0px 0px -80px 0px" });
+      els.forEach(el => io.observe(el));
+    });
+  </script>
 </body>
 </html>
- 
