--- a/brothers.html
+++ b/brothers.html
@@ -22,6 +22,16 @@
 <meta name="description" content="Meet the brothers of Kappa Theta Pi at Vanderbilt: leaders in computer science, engineering, and technology innovation across the School of Engineering and the Wond’ry.">
 <link rel="canonical" href="https://ktpvandy.org/brothers.html">
 <meta name="keywords" content="Vanderbilt computer science, Vanderbilt computer science ranking, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt technology, Vanderbilt Wond'ry, Vanderbilt engineering majors, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
+  <!-- 🔑 SEO & social tags -->
+  <title>Vanderbilt Greek Life & Engineering | Fraternities, Sororities, and Student Life</title>
+  <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
+  
+  <!-- Social share preview -->
+  <meta property="og:title" content="Vanderbilt Greek Life & Engineering" />
+  <meta property="og:description" content="Discover fraternities, sororities, and top-ranked engineering programs at Vanderbilt University." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ktpvandy.org/" />
+  <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
 
 
     <style>
