--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,6 +24,16 @@
 <meta name="description" content="Contact Kappa Theta Pi at Vanderbilt University to learn more about computer science, engineering, technology, and innovation opportunities.">
 <link rel="canonical" href="https://ktpvandy.org/contact.html">
 <meta name="keywords" content="Contact Vanderbilt fraternities, Vanderbilt computer science, Vanderbilt technology, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, the Wond'ry, VUIT Vanderbilt, Vanderbilt IT Help Desk, Vanderbilt IT email, Vanderbilt IT ticket, Vanderbilt IT help">
+  <!-- 🔑 SEO & social tags -->
+  <title>Vanderbilt Greek Life & Engineering | Fraternities, Sororities, and Student Life</title>
+  <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
+  
+  <!-- Social share preview -->
+  <meta property="og:title" content="Vanderbilt Greek Life & Engineering" />
+  <meta property="og:description" content="Discover fraternities, sororities, and top-ranked engineering programs at Vanderbilt University." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ktpvandy.org/" />
+  <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
 
 
   
