--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,16 @@
 <meta name="description" content="Explore Vanderbilt computer science, engineering, and technology through Kappa Theta Pi, the university’s premier professional technology fraternity.">
 <link rel="canonical" href="https://ktpvandy.org/home.html">
 <meta name="keywords" content="Vanderbilt computer science, Vanderbilt technology, Vanderbilt School of Engineering, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt School of Engineering reviews, Vanderbilt computer science ranking, Vanderbilt technology courses, Vanderbilt engineering majors, Vanderbilt engineering acceptance rate, Vanderbilt engineering ranking">
+  <!-- 🔑 SEO & social tags -->
+  <title>Vanderbilt Greek Life & Engineering | Fraternities, Sororities, and Student Life</title>
+  <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
+  
+  <!-- Social share preview -->
+  <meta property="og:title" content="Vanderbilt Greek Life & Engineering" />
+  <meta property="og:description" content="Discover fraternities, sororities, and top-ranked engineering programs at Vanderbilt University." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ktpvandy.org/" />
+  <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
 
 
 <style type="text/css">
