--- a/pages/ktp_in_action.html
+++ b/pages/ktp_in_action.html
@@ -21,6 +21,16 @@
 <meta name="description" content="See how Kappa Theta Pi drives innovation at Vanderbilt through technology projects, computer science, and engineering activities at the Wond’ry.">
 <link rel="canonical" href="https://ktpvandy.org/ktp_in_action.html">
 <meta name="keywords" content="Vanderbilt technology, Vanderbilt computer science, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, the Wond'ry, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering ranking, Vanderbilt mechanical engineering, Vanderbilt aerospace engineering, Vanderbilt electrical engineering">
+  <!-- 🔑 SEO & social tags -->
+  <title>Vanderbilt Greek Life & Engineering | Fraternities, Sororities, and Student Life</title>
+  <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
+  
+  <!-- Social share preview -->
+  <meta property="og:title" content="Vanderbilt Greek Life & Engineering" />
+  <meta property="og:description" content="Discover fraternities, sororities, and top-ranked engineering programs at Vanderbilt University." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ktpvandy.org/" />
+  <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
 
     
 
