--- a/recruitment.html
+++ b/recruitment.html
@@ -20,6 +20,16 @@
 <meta name="description" content="Apply to join Kappa Theta Pi at Vanderbilt. Recruitment for students in computer science, engineering, technology, and innovation at the Wond’ry.">
 <link rel="canonical" href="https://ktpvandy.org/recruitment.html">
 <meta name="keywords" content="Vanderbilt fraternity recruitment, Vanderbilt computer science, Vanderbilt technology fraternity, Vanderbilt School of Engineering, Vanderbilt School of Engineering reviews, Vanderbilt Wond'ry, Vanderbilt engineering acceptance rate, Vanderbilt engineering majors, Vanderbilt computer science ranking, Vanderbilt engineering curriculum, Vanderbilt engineering minors">
+  <!-- 🔑 SEO & social tags -->
+  <title>Vanderbilt Greek Life & Engineering | Fraternities, Sororities, and Student Life</title>
+  <meta name="description" content="Explore Vanderbilt University Greek Life, including fraternities and sororities like AXO, ADPi, TriDelt, Pike, and more. Learn about Vanderbilt Computer Science, Engineering programs, and campus life.">
+  
+  <!-- Social share preview -->
+  <meta property="og:title" content="Vanderbilt Greek Life & Engineering" />
+  <meta property="og:description" content="Discover fraternities, sororities, and top-ranked engineering programs at Vanderbilt University." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ktpvandy.org/" />
+  <meta property="og:image" content="https://ktpvandy.org/images/preview.jpg" />
 
   
   <style>
