--- a/brothers.html
+++ b/brothers.html
@@ -1359,6 +1359,40 @@
       <!-- Alumni Section -->
       <div id="alumni" class="brothers-section">
         <div class="brothers-grid">
+                   <!-- Jenna Holland -->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images/Jenna.jpg" alt="Jenna Holland" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/jennavholland/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Jenna Holland</div>
+              <div class="profile-title">Alumni</div>
+            </div>
+          </div>
+
+          <!-- Katherine Oung -->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images" alt="Katherine Oung" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/katherine-oung/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Katherine Oung</div>
+              <div class="profile-title">Alumni</div>
+            </div>
+          </div>
+
           <!-- Kendelle Grubbs -->
           <div class="profile-card">
             <div class="profile-image-container">
@@ -1376,19 +1410,19 @@
             </div>
           </div>
 
-          <!-- Jenna Holland -->
+          <!-- Lorita Rozenbaum -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/Jenna.jpg" alt="Jenna Holland" class="profile-image">
+              <img src="assets/brother-images" alt="Lorita Rozenbaum" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/jennavholland/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/lolitarozenbaum/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
               </div>
             </div>
             <div class="profile-info">
-              <div class="profile-name">Jenna Holland</div>
+              <div class="profile-name">Lorita Rozenbaum</div>
               <div class="profile-title">Alumni</div>
             </div>
           </div>
@@ -1409,6 +1443,7 @@
               <div class="profile-title">Alumni</div>
             </div>
           </div>
+
         </div>
       </div>
     </main>
